kubernetes/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: danklinux-website
  namespace: danklinux
spec:
  selector:
      app: danklinux-website
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
