kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danklinux-website-ingress
  namespace: danklinux
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - danklinux.com
    secretName: danklinux-com-server-secret
  rules:
  - host: danklinux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: danklinux-website
            port:
              number: 80
